<resources>
    <string name="app_name">Diet &amp; Fitness Plan App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="guidance1">Don\'t Have An Account ? Sign Up Now <a href="https://www.hongkiat.com/blog/mobile-login-signup-form-examples/" ></a></string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Create An Account</string>
    <string name="setting">Setting</string>
    <string name="currentweight">Current Weight</string>
    <string name="kg1">60.0 kg</string>
    <string name="start">Start</string>
    <string name="goal">Goal</string>
    <string name="kg2">60.0kg</string>
    <string name="kg3">55.0kg</string>
    <string name="msg1">Last Weigh In-20 days ago</string>
    <string name="read">Read</string>
    <string name="msg2">Please fill in the form below...</string>
    <string name="ques1">What is your target now?</string>
    <string name="opt1">Lose Weight</string>
    <string name="opt2">Maintain Weight</string>
    <string name="opt3">Gain Weight</string>
    <string name="ques2">How many weight do you want to lose/maintain/gain ?</string>
    <string name="kg">KG</string>
    <string name="ques3">What is your gender?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="ques4">What is your current weight ?</string>
    <string name="ques5">What is your current height?</string>
    <string name="height">CM</string>
    <string name="ques6">What is your country?</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="required">Please fill in the input!!</string>
    <string name="name">Name :</string>
    <string name="gender">Gender :</string>
    <string name="email2">Email :</string>
    <string name="country">Country :</string>
    <string name="currentWeight2">Current Weight :</string>
    <string name="expectedWeight">Expected Weight :</string>
    <string name="food_image">Food Image</string>
    <string name="food_name">Food Name</string>
    <string name="food_calories">Food Calories</string>
    <string name="food_description">Food Description</string>
    <string name="save">Save</string>
    <string name="nutrition">NutritionList</string>
    <string name="customerservice">Customer Service</string>
    <string name="msg3">How Can We Help You ?</string>
    <string name="search">Search</string>
    <string name="msg4">Please Contact Us</string>
    <string name="phonenumber">+6019-9988802</string>
    <string name="email3">dietfitness99@hotmail.com</string>
    <string name="title">Recommended Food</string>

    <string-array name="country">
        <item>Malaysia</item>
        <item>China</item>
        <item>Japan</item>
        <item>Singapore</item>
        <item>Thailand</item>
        <item>Korea</item>
        <item>Taiwan</item>
    </string-array>
</resources>
