<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="163dp">

        <ImageView
            android:id="@+id/imageViewFood"
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/food_image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textViewFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/food_name"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.585"
            app:layout_constraintStart_toStartOf="@+id/imageViewFood"
            app:layout_constraintTop_toTopOf="@+id/imageViewFood" />

        <TextView
            android:id="@+id/textViewFoodCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/food_calories"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/textViewFoodDescription"
            app:layout_constraintStart_toStartOf="@+id/textViewFoodName"
            app:layout_constraintTop_toBottomOf="@+id/textViewFoodName"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/textViewFoodDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_description"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewFood"
            app:layout_constraintStart_toStartOf="@+id/textViewFoodName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>